# etl_excel_aovivo

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
caminho/para/diretorio/teste/: teste.csv
data/output/: concatenado.csv
docs/: index.md  requisitos.md
site/: 404.html  index.html
site/requisitos/: index.html
site/search/: search_index.json
src/: extract.py  funcionalidade2.py  load.py  pipeline.py  transform.py
tests/: test_extract.py
