[tool.poetry]
name = "etl-excel-aovivo"
version = "0.1.0"
description = ""
authors = ["Luciano Vasconcelos <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
