[tool.poetry]
name = "etl-excel-aovivo"
version = "0.1.0"
description = ""
authors = ["Luciano Vasconcelos <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
pandas = "^2.2.3"
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.12.2"
pygments = "^2.18.0"
mkdocs-material = "^9.5.43"
pytest = "^8.3.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -v"
docs = "mkdocs serve"
run = "python src/pipeline.py"
